--- a/workshops.html
+++ b/workshops.html
@@ -54,41 +54,103 @@
             <li><a href="photogallery.html">NOSTALGIA</a></li>
         </ul>
         </div>
-       <!-- <div id="menu">
+       <div id="menu">
             <ul>
-            <li><a href="#section1">Workshop 1</a></li>
-            <li><a href="#section2">Workshop 2</a></li>
+            <li><a href="#section1">INTRODUCTION<img src="images/robot.png" style="height:80%;width:18%;position:absolute;left:5%"/></a></li>
+            <li><a href="#section2">SIXTHSENSE BOTZ<img src="images/psychic.png" style="height:80%;width:18%;position:absolute;left:5%"/></a></li>
+            <li><a href="#section3">COURSE CONTENT<img src="images/hand.png" style="height:80%;width:18%;position:absolute;left:5%"/></a></li>
+            <li><a href="#section4">DURATION<img src="images/clock.png" style="height:80%;width:18%;position:absolute;left:5%"/></a></li>
+            <li><a href="#section5">PARTICIPATION<img src="images/anvil.png" style="height:80%;width:18%;position:absolute;left:5%"/></a></li>
+            <li><a href="#section6">CONTACTS<img src="images/radar.png" style="height:80%;width:18%;position:absolute;left:5%"/></a></li>
+            <li><a href="#section7">SIXTHSENSE KIT<img src="images/circuit.png" style="height:80%;width:18%;position:absolute;left:5%"/></a></li>
         </ul>
         <img src="images/arrow.png" id="arrow" style="position:absolute;left:100%;top:35%;width:17%;height:10%"/>
         </div>
-
         <div class="section black" id="section1">
-            <h2>Workshop 1</h2>
-            <p>
-                MY Spectre around me night and day
-                Like a wild beast guards my way;
-                My Emanation far within
-                Weeps incessantly for my sin.
-            </p>
-        </div>
-        <div class="section white" id="section2">
-            <h2>Workshop 2</h2>
-            <p>
-                ‘A fathomless and boundless deep,
-                There we wander, there we weep;
-                On the hungry craving wind
-                My Spectre follows thee behind.
-
-            </p>
-        </div> -->
-		<div class="section black" id="section1">
-            <h2>WORKSHOPS</h2>
+            <h2>INTRODUCTION</h2>
             <img src="images/robot.png"/>
             <p>
                Do you want to cope up with state of the art technologies and want an enjoyable and enriching experience at the same time? Or maybe interact with students having the same interests and give yourself a boost in the subject? If yes, then Technix workshops are tailor-made for you. 
                Applying the time-tested principle of "Do while you learn", workshops promise to be an enjoyable yet enriching experience to the participants, with significant interaction amongst peers sharing the same interests. 
             </p>
         </div>
+        <div class="section white" id="section2">
+            <h2>SIXTHSENSE BOTZ</h2>
+            <img src="images/psychic.png"/>
+            <p>
+                India’s first “SixthSense Botz” vision robotics workshop designed by team ARK. In this
+                workshop, we have tried to interface digital world with physical world. We all sit in front of computer entire day for our daily activity and
+                one hand is busy clicking the things on the computer, then we felt to design something that can
+                interface the real human with the computer. We humans can see the things around us, differentiate
+                between colors then why can’t machine? And that thought leads us to design “sixthsenseBotz”
+                In this two day workshop, using a camera, the robot will be able to tell what the robot is sensing. 
+            </p>
+        </div>
+        <div class="section black" id="section3">
+            <h2>COURSE CONTENT</h2>
+            <img src="images/hand.png"/>
+            <p>
+                For processing of the images, we use a tool called as MATLAB, which is widely used in industry.In this workshop, the applications that will be taught to the participants are as mentioned below:-
+                <ol style="position:relative;left:20%;top:2%">
+                 <li>Color Recognition Application</li>
+                 <li>Ball following robot</li>
+                 <li>Gesture controlled robot.</li>
+                 <li>Gesture controlled windows media player.</li>
+                 <li>Gesture controlled mouse pointer</li>
+                </ol>
+            </p>
+        </div>
+        <div class="section white" id="section4">
+            <h2>DURATION</h2>
+            <img src="images/clock.png"/>
+            <p>
+                We conduct workshops on 2 consecutive days, each day 8 hours session so in total
+                16 hours properly divided into theory and hands on sessions.
+            </p>
+        </div>
+        <div class="section black" id="section5">
+            <h2>PARTICIPATION</h2>
+            <img src="images/anvil.png"/>
+            <p>
+                The workshop will be conducted on a team basis, and Five participants per team.The price of registering for our workshop is Rs. 1000 per individual.
+                The charges for the participation in our workshop include:
+                <ol style="position:relative;left:20%;top:2%">
+                <li>Training fee of the 2 day workshop</li>
+                <li>Take away kit of SixthSense Botz</li>
+                <li>Information & software CD</li>
+                <li>Individual participation certificate</li>
+                </ol> 
+            </p>
+        </div>
+        <div class="section white" id="section6">
+            <h2>CONTACTS</h2>
+            <img src="images/radar.png"/>
+            <p>
+                To register for the workshop, you can contact:
+                <ol style="position:relative;left:20%;top:2%">
+                 <li>Viren Nadkarni:<br/>ph:+919420297504</li>
+                 <li>Sahil Chelaramani:<br/>ph:+919730147640</li>
+                </ol>
+            </p>
+        </div>
+        <div class="section black" id="section7">
+            <h2>SIXTHSENSE KIT</h2>
+            <img src="images/circuit.png"/>
+            <p>
+                The SixthSense Botz Mini Lab Contains:
+                 <ol style="position:relative;left:20%;top:2%">
+                <li>ARDUINO Embedded circuit board</li>
+                <li>40 MP Night Vision Webcamera</li>
+                <li>2 DC geared motors</li>
+                <li>2 ABS polished wheels with metal couplings</li>
+                <li>Castor Wheels</li>
+                <li>ARK Magic Chasis</li>
+                <li>Ball for Image Processing</li>
+                <li>Usb type-A to type-B cable</li>
+                </ol>
+            </p>
+        </div>
+		
 <div id="social" style="position:fixed;top:80%;left:95%">
     <div class="icon">
     <div class="color" style="display:none"><a href="https://www.facebook.com/events/216592075143026/" target="_blank"><img src="images/Facebookc.png"/></a></div>
