Updated event info

--- a/events.html
+++ b/events.html
@@ -64,7 +64,10 @@
             <li><a href="#section6"><img src="images/brain.png" style="height:80%;width:18%;position:absolute;left:5%"/>K.B.C.</a></li>
             <li><a href="#section7"><img src="images/social.png" style="height:80%;width:18%;position:absolute;left:5%"/>SOCIALLY</a></li>    
             <li><a href="#section8"><img src="images/techno.png" style="height:80%;width:18%;position:absolute;left:5%"/>CODE RELAY</a></li>
-            <li><a href="#section9"><img src="images/mask.png" style="height:80%;width:18%;position:absolute;left:5%"/>TWO FACED</a></li>
+            <li><a href="#section9"><img src="images/mask.png" style="height:80%;width:18%;position:absolute;left:5%"/>LITERATTI</a></li>
+            
+            <li><a href="#section10"><img src="images/camera.png" style="height:80%;width:18%;position:absolute;left:5%"/>SHARPSHOOTER</a></li>
+            <li><a href="#section11"><img src="images/auct.png" style="height:80%;width:18%;position:absolute;left:5%"/>AUCTIONVILLE</a></li>
         </ul>
         <img src="images/arrow.png" id="arrow" style="position:absolute;left:100%;top:35%;width:17%;height:10%"/>
         </div>
@@ -91,17 +94,19 @@
             <p>
                 Solo/Team based multiplayer video gaming now bringing
                     <br/>1.Counter Strike<br/>
-                    2.Need for Speed<br/>
-                    3.DOTA<br/>
+                    2.Need for Speed:Most Wanted<br/>
+                    3.Foosball:Winner takes the table home.<br/>
+                    4.Frets on Fire.<br/>
                 </ol>
-                Technix will also host various other games.
+                Technix will also host various other flash Games games.
             </p>
         </div>
         <div class="section white" id="section4">
             <h2>SYNCHRONIZE</h2>
             <img src="images/sing.png"/>
             <p>
-                Dialogues are remade for a given video scene.
+                Since the invention of Edison's kinetoscope, movies have come from being short entertaining reels to high-definition motion pictures serving the needs of entertainment,
+                advertising, education and as an expression of art! Use your creativity and make narratives for these silent videos to win!<br/>
             </p>
         </div>
         <div class="section black" id="section5">
@@ -111,7 +116,7 @@
                 Teams will be given musical pieces and audio authoring software to create mind blowing mash-ups.
             </p>
         </div>
-<div class="section white" id="section6">
+        <div class="section white" id="section6">
             <h2>K.B.C.</h2>
             <img src="images/brain.png"/>
             <p>
@@ -134,10 +139,28 @@
             </p>
         </div>
         <div class="section black" id="section9">
-            <h2>TWO FACED</h2>
+            <h2>Literatti</h2>
             <img src="images/mask.png"/>
             <p>
-                You will be forced to switch between pros and cons of a given topic on the ring of a bell.
+                The english language is full of rules and exceptions, idiosycrasies and plain weirdness. Think your grasp of the language matches that of Shakespear or Tolstoy? Take part to
+                prove it! 
+            </p>
+        </div>
+        <div class="section white" id="section10">
+            <h2>SHARPSHOOTER</h2>
+            <img src="images/camera.png"/>
+            <p>
+                Photographers posses not only a sharpened capability to see moments, even intuit those about to arrive but they have toned their ability
+                to know how to make that split second decision which tells them that what they see, is worth capturing... If you've got this in you,
+                then here's a chance to show-off the best you can do!
+            </p>
+        </div>
+        <div class="section black" id="section11">
+            <h2>AUTIONVILLE</h2>
+            <img src="images/auct.png"/>
+            <p>
+                Place your bids to increase the value of your assets,
+                so people bid to win!!
             </p>
         </div>
 <div id="social" style="position:fixed;top:80%;left:95%">
