--- a/specials.html
+++ b/specials.html
@@ -68,10 +68,11 @@
             <h2>Build-a-thon</h2>
             <img src="images/tinker.png"/>
             <p>
-                A competition for participants to explore their creativity
-                and make their ideas reality.This is a mega event, and will last for 24-hours, during which time, teams are required to build their ideas from scratch.<br/>
-                <b>Prize:Rs. 15,000.</b><br/>
+                 Have an idea that can change the world? Think it's feasible to build it in 24 hours? Technix 7's Build-a-thon gives you a chance to showcase your wit and ingenuity, by bringing your ideas to life in 24 hours! <br/>
+                1. Anyone with a Valid ID can take part(including teachers and Passouts)<br/>
+                2. This event IS NOT specific to code. Student of Mech,Civil,ETC,ENE,IT and off course Comp are welcome to take part.Ideas from any branch are applauded, and if you can build it in 24 hours , you have a chance of taking it all home!!<br/>
                 You can register online <a href="http://goo.gl/VcJ5T">here</a><br/>
+                Contact: Sahil Chelaramani ph:+919730147640<br/>
             </p>
         </div>
         <div class="section white" id="section2">
