Added Sponsors details

--- a/index.html
+++ b/index.html
@@ -196,8 +196,91 @@ Our official email:<b>TeamCursor@gectechnix.in</b> <br/><i>OR</i><br/> you can c
 </div>
 <div id="sponsors" class="scroll-pane">
 <a href="javascript:" style="position:relative;left:96%" id="closesp"><img src="images/close.png" style="background-color:#bbb;width:25px;height:25px"/></a>
-<div style="color:#333">
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;We will update this section shortly.
+<div style="color:#333;text-align:center">
+<b>SPONSORS</b><br/>
+We are proud to present the Technix 7 sponsor list: 
+<br/><br/>
+<div>
+<b>Co-Sponsor</b><br/>
+<br/><br/>
+<div class="sponsor">
+	<img src="images/Logos/Govt.png" /><br/>
+	<b>Dept. of I.T.</b><br/>
+</div>
+<br/><br/>
+</div>
+<hr/>
+<div style="position:relative">
+<b>Associate Sponsor</b><br/>
+<br/><br/>
+<br/><br/>
+<div class="sponsor" style="position:absolute;top:10%;left:17%">
+	<img src="images/Logos/karl.png" /><br/>
+	Karl Logistics<br/>
+</div>
+<br/><br/>
+<div class="sponsor" style="position:absolute;top:15%;left:50%">
+	<img src="images/Logos/target.png" style="width:40%;height:40%" /><br/>
+	Target Innovations<br/>
+</div>
+<br/><br/>
+<br/><br/>
+<br/><br/>
+</div>
+<hr/>
+<div>
+<b>E-Sponsor</b><br/>
+<br/><br/>
+<div class="sponsor">
+	<img src="images/Logos/commscope.png" style="width:40%;"/><br/>
+	Commscope<br/>
+</div>
+<br/><br/>
+<br/><br/>
+</div>
+<hr/>
+<div style="position:relative">
+<b>Media Partners</b><br/>
+<br/><br/>
+<br/><br/>
+<div class="sponsor" style="position:absolute;top:10%;left:10%">
+	<img src="images/Logos/radio.jpg" style="width:65%;height:50%"/><br/>
+	Radio Mirchi<br/>
+</div>
+<br/><br/>
+<div class="sponsor" style="position:absolute;top:10%;left:50%">
+	<img src="images/Logos/prudent.jpg" style="width:65%;height:50%"/><br/>
+	Prudent Media<br/>
+</div>
+<br/><br/>
+<br/><br/>
+<br/><br/>
+</div>
+<hr/>
+<div >
+<b>Technix 7 powered by:</b><br/>
+<br/><br/>
+<div class="sponsor">
+	<img src="images/Logos/algroups.png" style="width:30%;height:30%"/><br/>
+	A.L. Groups<br/>
+</div>
+<br/><br/>
+<div class="sponsor">
+	<img src="images/Logos/kaavay.png" style="width:25%;height:20%"/><br/>
+	Kaavay<br/>
+</div>
+<br/><br/>
+<div class="sponsor">
+	<img src="images/Logos/marine.png" style="width:23%;height:20%"/><br/>
+	Marine<br/>
+</div>
+<br/><br/>
+<div class="sponsor">
+	<img src="images/Logos/essen.jpg"/><br/>
+	Essen Group<br/>
+</div>
+<br/><br/>
+</div>
 </div>
 </div>
 <script type="text/javascript" src="scripts/jquery.js"></script>
