--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Our official email:<b>TeamCursor@gectechnix.in</b> <br/><i>OR</i><br/> you can c
 	<div style="position:relative;top:25%;text-align:center">
 	<a href="javascript:" id="faq" style="color:#00ccff">F.A.Q.</a><br/>
 	<a href="javascript:" id="reachus">REACH US</a><br/>
-	<a href="javascript:" id="schedule">SCHEDULE</a><br/>
+	<a href="javascript:" id="schedule">RULES</a><br/>
 	<a href="javascript:" id="creds">CREDITS</a><br/>
 	</div> 	
 </div>
@@ -191,7 +191,7 @@ Our official email:<b>TeamCursor@gectechnix.in</b> <br/><i>OR</i><br/> you can c
 		<b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;BAKAWORKS</b>
 	</div>
 	<div id="sched" style="display:none;text-align:center;width:45%;position:relative;left:22%">
-		We will update this section shortly.Stay tuned!! 
+		You can download a copy of the rules <a href="http://gectechnix.in/files/rulebook.pdf">here</a>
 	</div>
 </div>
 <div id="sponsors" class="scroll-pane">
